# netbox-plugin-audit

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
netbox_plugin_audit/: __init__.py  __main__.py  auditor.py  cli.py  report.py
netbox_plugin_audit/checks/: __init__.py  certification.py  changelog.py  django_app.py  github.py  linting.py  packaging.py  pluginconfig.py  pyproject.py  readme.py  security.py  structure.py  versioning.py  workflows.py
samples/: netbox-catalyst-center.json  netbox-catalyst-center.md  netbox-catalyst-center.txt
